Fixed z-index

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     width: 100vw;
     height: 100vh;
     display: flex;
-    z-index: 2;
+    z-index: 5;
     pointer-events: none;
 }
 .bar{
@@ -43,8 +43,10 @@ header{
     width: 100%;
     position: fixed;
     top: 0;
+    left: 0;
     background-color: #f1f0f0;
     overflow: hidden;
+    z-index: 2;
 }
 nav{
     max-width: 1200px;
@@ -53,6 +55,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #f1f0f0;
 }
 nav .logo{
     font-size: 1.5em;
@@ -100,6 +103,7 @@ main{
 .landing-details > h2{
     font-size: 5em;
     text-transform: capitalize;
+    z-index: 1;
 }
 .landing-details > p{
     font-size: 2.4em;
@@ -136,6 +140,7 @@ main{
     height: 100%;
     object-fit: cover;
     transform-origin: bottom right;
+    z-index: 1;
 }
 
 @media screen and (max-width: 1050px) {
